ingress/development/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-http-development
  namespace: default
  annotations:
    #kubernetes.io/ingress.class: nginx
    #cert-manager.io/issuer: dev-issuer
    #cert-manager.io/issuer-kind: OriginIssuer
    #cert-manager.io/issuer-group: cert-manager.k8s.cloudflare.com
    #external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    #external-dns.alpha.kubernetes.io/hostname: eamgames.net
    nginx.ingress.kubernetes.io/proxy-next-upstream: error timeout http_502
    nginx.ingress.kubernetes.io/retry-non-idempotent: "true"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '30'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '30'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '30'
    nginx.ingress.kubernetes.io/service-upstream: "true"
    kubernetes.io/ingress.allow-http: "true"
    #nginx.ingress.kubernetes.io/enable-cors: "true"
    #nginx.ingress.kubernetes.io/cors-allow-headers: "*"
    #nginx.ingress.kubernetes.io/cors-allow-credentials: "false"
    #nginx.ingress.kubernetes.io/cors-allow-methods: "*"
    #nginx.ingress.kubernetes.io/cors-max-age: "1728000"
    #nginx.ingress.kubernetes.io/cors-allow-origin: "eamgames.net, www.eamgames.net, api.eamgames.net, zero.eamgames.net, admin.eamgames.net"
    #nginx.ingress.kubernetes.io/configuration-snippet: |
    #more_set_headers "Access-Control-Allow-Origin: $http_origin";
    #linkerd.io/inject: ingress
spec:
  #ingressClassName: gce
  # tls:
  # - secretName: ssl-cert-stage
  # - secretName: origin-ca-key
  #hosts:
  rules:

  - host: xarv.ru
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: website-public-s
            port:
              number: 8000

  - host: www.xarv.ru
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: website-public-s
            port:
              number: 8000

  - host: xarv.ru
    http:
      paths:
      - pathType: ImplementationSpecific
        path: "/api/*"
        backend:
          service:
            name: api-gate-s
            port:
              number: 7000
